# nlp-pipeline

./: .gitattributes  .gitignore  .requires-python  LICENSE  README.md  pyproject.toml  requirements.txt
app/: streamlit_app.py  test_app.py
app/.ipynb_checkpoints/: streamlit_app-checkpoint.py  test_app-checkpoint.py
data/: example_data.csv  public_comments.json
models/: top2vec_model
notebooks/: BERTopic_Chunked.ipynb  OutPut_Config.ipynb  Sentiment.ipynb  Topic2Vec_Classic.ipynb  Topic2Vec_Final.ipynb  comments_with_top2vec.csv  streamlit_dev.ipynb  top2vec_topic_summary.csv
notebooks/.ipynb_checkpoints/: BERTopic-checkpoint.ipynb  BERTopic_Chunked-checkpoint.ipynb  OutPut_Config-checkpoint.ipynb  Sentiment-checkpoint.ipynb  Topic2Vec_Classic-checkpoint.ipynb  Topic2Vec_Final-checkpoint.ipynb  streamlit_dev-checkpoint.ipynb
outputs/: all_bertopic_topic_summary_combined.csv  all_bertopic_topic_summary_combined_cleaned.csv  all_comments_with_bertopic_combined.csv  bertopic_topic_summary_TTB-2025-0002.csv  bertopic_topic_summary_TTB-2025-0003.csv  comments_with_bertopic.csv  comments_with_bertopic_TTB-2025-0002.csv  comments_with_bertopic_TTB-2025-0003.csv
outputs/.ipynb_checkpoints/: all_bertopic_topic_summary_combined-checkpoint.csv  all_comments_with_bertopic_combined_cleaned-checkpoint.csv  bertopic_topic_summary-checkpoint.csv  bertopic_topic_summary_TTB-2025-0003-checkpoint.csv  comments_with_bertopic_TTB-2025-0002-checkpoint.csv  comments_with_bertopic_TTB-2025-0003-checkpoint.csv
